--- a/db_test_project_thi/pubspec.yaml
+++ b/db_test_project_thi/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   sqflite: any
   path_provider: any
+  http: ^0.12.2
+  rxdart: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,6 +35,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.5.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
